240725_8월 랜딩페이지
240725_8월 랜딩페이지

--- a/upload.html
+++ b/upload.html
@@ -24,20 +24,16 @@
     <link rel="icon" href="../../resources/favicons/favicon-32.png" sizes="32x32" />
     <link rel="apple-touch-icon" href="../../resources/favicons/favicon-180.png" sizes="180x180" />
 
-    <link rel="stylesheet" type="text/css" href="../assets/css/glo_base.css" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/discover_layout.css" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/discover_contents.css" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/discover_popup.css" />
-    <link rel="stylesheet" type="text/css" href="../assets/css/hyperpro_aug.css" />
+    <link rel="stylesheet" type="text/css" href="/content/dam/glo-jp/korea-images/brand-pages/assets/css/hyperpro_aug.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 
-    <script src="../assets/js/jquery-3.5.1.min.js"></script>
-    <script src="../assets/js/ui.plugins.js"></script>
-    <script src="../assets/js/gsap.min.js"></script>
-    <script src="../assets/js/ScrollTrigger.min.js"></script>
+    <script src="/content/dam/glo-jp/korea-images/brand-pages/assetsjs/jquery-3.5.1.min.js"></script>
+    <script src="/content/dam/glo-jp/korea-images/brand-pages/assets/js/ui.plugins.js"></script>
+    <script src="/content/dam/glo-jp/korea-images/brand-pages/assets/js/gsap.min.js"></script>
+    <script src="/content/dam/glo-jp/korea-images/brand-pages/assets/js/ScrollTrigger.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-</head>
+
 <body>
     
     <div class="glo-contents">
@@ -45,8 +41,8 @@
             <div class="main__kv01">
                 <div class="inner">
                     <div class="txt">
-                        <h2 class="txt__ttl">멤버 한정 <br><span class="mont">30,000</span>원 OFF</h2>
-                        <p class="txt__sub">43% 할인으로 만나보세요</p>
+                        <h2 class="txt__ttl">멤버 한정 <br><span class="mont">30,000</span>원 <span class="mont">OFF</span></h2>
+                        <p class="txt__sub"><span class="mont">43% </span>할인으로 만나보세요</p>
                     </div>
                     <div class="btn">
                         <a href="/glo/devices/hyperpro" target="_blank" class="btn__rec">구매하기<span class="arrow"></span></a>
@@ -59,7 +55,7 @@
                 <span class="glo__logo">글로 로고</span>
                 <div class="ttl">
                     <p>전에 없던 만족감 그 이상* <br> 하이퍼 프로</p>
-                    <img src="/images/2024/pro_aug/logo_txt.png" alt="하이퍼 프로 로고">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/logo_txt.png" alt="하이퍼 프로 로고">
                 </div>
                 <span class="noti">* 글로 하이퍼 X2 스탠다드 모드 대비. <br class="mo_only"> 본 제품은 무해하지 않으며, 중독성이 있는 니코틴을 포함하고 있습니다.</span>
             </div>
@@ -69,8 +65,8 @@
             <h3 class="reveal reveal_BTT">카더가든 & 킬드런의<br class="mo_only"> 프로 그 이상의 STORY</h3>
             <div class="wrap">
                 <div class="story__box reveal reveal_BTT">
-                    <img src="/images/2024/pro_aug/story_01.png" alt="카더가든 이미지" class="people">
-                    <img src="/images/2024/pro_aug/story_01_device.png" alt="하이퍼 프로" class="dev">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_01.png" alt="카더가든 이미지" class="people">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_01_device.png" alt="하이퍼 프로" class="dev">
                     <p class="story__txt">
                         <strong>
                             늘 지금보다 나아지기 위해 노력하는 <br>
@@ -83,15 +79,15 @@
                     </p>
                 </div>
                 <div class="story__box killdren reveal reveal_BTT">
-                    <img src="/images/2024/pro_aug/story_02.png" alt="킬드런 이미지" class="people">
-                    <img src="/images/2024/pro_aug/story_02_device.png" alt="하이퍼 프로" class="dev">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_02.png" alt="킬드런 이미지" class="people">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_02_device.png" alt="하이퍼 프로" class="dev">
                     <p class="story__txt">
                         그림을 그리다보니 미적인 부분을 먼저 보게 되는데<br>
                         하이퍼 프로는 깔끔한 디자인과 견고함 때문에<br>
                         전체적으로 고급스러운 느낌이에요.<br>
                         <br>
                         <strong>
-                            EasyView™ 스크린도 직관적이고 심플해서<br>
+                            hyper pro도 직관적이고 심플해서<br>
                             편리함 ‘그 이상’ 으로 사용하기 좋네요.
                         </strong>
                     </p>
@@ -101,27 +97,27 @@
 
         <section class="event">
             <h3 class="reveal reveal_BTT">하이퍼 프로와 함께 <br class="mo_only"> <span class="text_deco">‘그 이상’</span> EVENT</h3>
-            <div class="date reveal reveal_BTT">이벤트 기간ㅣ<span>2024. 07. 29 ~ 08. 25</span> </div>
+            <div class="date reveal reveal_BTT">이벤트 기간ㅣ<span class="mont">2024. 07. 29 ~ 08. 25</span> </div>
             <div class="inner reveal reveal_BTT">
                 <div class="event__list">
                     <ul>
                         <li>
-                            <img src="/images/2024/pro_aug/event_icon_01.png" alt="멤버 혜택가 아이콘">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/event_icon_01.png" alt="멤버 혜택가 아이콘">
                             <p class="sub">멤버 혜택가로<br>하이퍼 프로 구매​</p>
                         </li>
                         <li>
-                            <img src="/images/2024/pro_aug/event_icon_02.png" alt="리뷰 아이콘">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/event_icon_02.png" alt="리뷰 아이콘">
                             <p class="sub">리뷰 남기면 선착순<br>​자몽 허니 블랙 티 증정​​</p>
                         </li>
                         <li>
-                            <img src="/images/2024/pro_aug/event_icon_03.png" alt="경품 아이콘">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/event_icon_03.png" alt="경품 아이콘">
                             <p class="sub">기기 등록하고​<br>푸짐한 경품까지​​</p>
                         </li>
                     </ul>
                 </div>
                 <div class="event__teabox">
-                    <img src="/images/2024/pro_aug/event_tea.png" alt="자몽허니블랙티" class="pc_only">
-                    <img src="/images/2024/pro_aug/event_tea_m.png" alt="자몽허니블랙티" class="mo_only">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/event_tea.png" alt="자몽허니블랙티" class="pc_only">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/event_tea_m.png" alt="자몽허니블랙티" class="mo_only">
                     <p>
                         하이퍼 프로 구매하고 <br>
                         ‘____ 그 이상’을 포함한 리뷰 작성 시 선착순<br>
@@ -151,7 +147,7 @@
                             한층 업그레이드 된 글로 만의 히팅 기술은 물론, <br>
                             최초 탑재된 AMOLED 스크린과 모드 선택이 편한 다이얼까지
                         </p>
-                        <img src="/images/2024/pro_aug/up_01.png" alt="만족감 그 이상">
+                        <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_01.png" alt="만족감 그 이상">
                         <span>
                             *글로 하이퍼 X2 스탠다드 모드 대비. <br>
                             본 제품은 무해하지 않으며, 중독성이 있는 니코틴을 포함하고 있습니다.
@@ -163,7 +159,7 @@
                             가벼운 알루미늄 소재에 메탈릭 포인트까지 <br>
                             손안에 쏙 들어오는 감각적인 디자인이 만족감을 더해줄 거예요
                         </p>
-                        <img src="/images/2024/pro_aug/up_02.png" alt="디자인 그 이상">
+                        <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_02.png" alt="디자인 그 이상">
                         <span>*본 제품은 무해하지 않으며, 중독성이 있는 니코틴을 포함하고 있습니다.</span>
                     </div>
                     <div class="swiper-slide">
@@ -172,7 +168,7 @@
                             함께 하는 사람들과 더 친근하게* <br>
                             재, 냄새를 줄여주니까* 걱정 없이 즐거운 시간을 보내세요
                         </p>
-                        <img src="/images/2024/pro_aug/up_03.png" alt="way better 그 이상">
+                        <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_03.png" alt="way better 그 이상">
                         <span>
                             *글로는 담배를 태우지 않고 가열합니다. <br>
                             사용 시 에어로졸(증기)이 발생하며, 태우는 일반 연초담배에 비해 냄새가 적고 재가 없습니다. <br>
@@ -189,13 +185,13 @@
                     <p  class="reveal reveal_BTT">한층 업그레이드 된 글로 만의 히팅 기술은 물론,<br> 최초 탑재된 AMOLED 스크린과<br> 모드 선택이 편한 다이얼까지</p>
                     <div class="swiper-wrapper reveal reveal_BTT">
                         <div class="swiper-slide">
-                            <img src="/images/2024/pro_aug/up_01_01_m.png" alt="heatboos 테크놀로지">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_01_01_m.png" alt="hyper pro">
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/2024/pro_aug/up_01_02_m.png" alt="EasyView™ 스크린">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_01_02_m.png" alt="hyper pro">
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/2024/pro_aug/up_01_03_m.png" alt="TasteSelect 다이얼">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_01_03_m.png" alt="hyper pro">
                         </div>
                     </div>
                     <span class="noti">*글로 하이퍼 X2 스탠다드 모드 대비. <br>
@@ -210,10 +206,10 @@
                         만족감을 더해줄 거예요</p>
                     <div class="swiper-wrapper reveal reveal_BTT">
                         <div class="swiper-slide">
-                            <img src="/images/2024/pro_aug/up_02_01_m.png" alt="heatboos 테크놀로지">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_02_01_m.png" alt="hyper pro">
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/2024/pro_aug/up_02_02_m.png" alt="EasyView™ 스크린">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_02_02_m.png" alt="hyper pro">
                         </div>
                     </div>
                     <span class="noti">*본 제품은 무해하지 않으며, 중독성이 있는 니코틴을 포함하고 있습니다.</span>
@@ -225,10 +221,10 @@
                     <p class="reveal reveal_BTT">한층 업그레이드 된 글로 만의 히팅 기술은 물론,<br> 최초 탑재된 AMOLED 스크린과<br> 모드 선택이 편한 다이얼까지</p>
                     <div class="swiper-wrapper  reveal reveal_BTT">
                         <div class="swiper-slide">
-                            <img src="/images/2024/pro_aug/up_03_01_m.png" alt="heatboos 테크놀로지">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_03_01_m.png" alt="hyper pro">
                         </div>
                         <div class="swiper-slide">
-                            <img src="/images/2024/pro_aug/up_03_02_m.png" alt="EasyView™ 스크린">
+                            <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/up_03_02_m.png" alt="hyper pro">
                         </div>
                     </div>
                     <span class="noti">
@@ -285,6 +281,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.1/ScrollToPlugin.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="assets/js/hyperpro_aug.js"></script>
+    <script src="/content/dam/glo-jp/korea-images/brand-pages/assets/js/hyperpro_aug.js"></script>
 </body>
 </html>
