--- a/hyperpro_augpromo.html
+++ b/hyperpro_augpromo.html
@@ -69,7 +69,8 @@
             <h3 class="reveal reveal_BTT">카더가든 & 킬드런의<br class="mo_only"> 프로 그 이상의 STORY</h3>
             <div class="wrap">
                 <div class="story__box reveal reveal_BTT">
-                    <img src="/images/2024/pro_aug/story_01.png" alt="카더가든 이미지" class="people">
+                    <img src="/images/2024/pro_aug/story_01.png" alt="카더가든 이미지" class="people pc_only">
+                    <img src="/images/2024/pro_aug/story_01_m.png" alt="카더가든 이미지" class="people mo_only">
                     <img src="/images/2024/pro_aug/story_01_device.png" alt="하이퍼 프로" class="dev">
                     <p class="story__txt">
                         <strong>
@@ -83,7 +84,8 @@
                     </p>
                 </div>
                 <div class="story__box killdren reveal reveal_BTT">
-                    <img src="/images/2024/pro_aug/story_02.png" alt="킬드런 이미지" class="people">
+                    <img src="/images/2024/pro_aug/story_02.png" alt="킬드런 이미지" class="people pc_only">
+                    <img src="/images/2024/pro_aug/story_02_m.png" alt="킬드런 이미지" class="people mo_only">
                     <img src="/images/2024/pro_aug/story_02_device.png" alt="하이퍼 프로" class="dev">
                     <p class="story__txt">
                         그림을 그리다보니 미적인 부분을 먼저 보게 되는데<br>
@@ -129,7 +131,21 @@
                     </p>
                 </div>
             </div>
-            <div class="title">‘하이퍼 프로는 <br class="mo_only"> <span class="text_deco">디자인</span>  그 이상’ </div>
+            <div class="title">
+                <span>‘하이퍼 프로는 </span> 
+                <div class="wrap">
+                    <div class="rolling">
+                        <ul >
+                            <li>디자인</li>
+                            <li>편리함</li>
+                            <li>간편함</li>
+                            <li>즐거움</li>
+                            <li>만족감</li>
+                        </ul>
+                    </div>  
+                    <span> 그 이상’ </span>
+                </div>
+            </div>
             <div class="btn">
                 <a href="/glo/devices/hyperpro" class="btn__rec">하이퍼 프로 구매하고 참여하기<span class="arrow"></span></a>
             </div>
@@ -266,7 +282,7 @@
                     </ul>
                     <p class="ttl">리뷰 이벤트 경품 - 스타벅스 아이스 허니 자몽 블랙티 T</p>
                     <ul>
-                        <li>네이버 스토어에서 하이퍼 프로를 구매한 후, 해당 채널에서 리뷰를 작성한 참여자를 대상으로 하며, 기타 판매 채널은 본 이벤트에서 제외됩니다.</li>
+                        <li>본 이벤트는 이벤트 기간 내 디스커버글로 홈페이지 또는 카카오 톡스토어/ 네이버 스토어에서 하이퍼 프로를 구매한 후, 해당 채널에서 리뷰를 작성한 참여자를 대상으로 하며, 기타 판매 채널은 본 이벤트에서 제외됩니다. </li>
                         <li>본 이벤트 경품은 제품 구매 수량 또는 횟수와 상관 없이 ID당 1회에 한해 제공됩니다. </li>
                         <li>본 이벤트는 선착순 이벤트로, 카카오 톡스토어/ 네이버 스토어/ 그리고 디스커버글로 홈페이지에서 기간 내 하이퍼 프로 구매 후, 각 채널에서 리뷰를 작성한 고객 선착순 100명을 대상으로 합니다. (총 300명 추첨)</li>
                         <li>본 이벤트는 이벤트 주제에 맞춰 "OO 그 이상"의 문구를 포함한 참여자에 한해 지급되며, 무성의한 참여글은 당첨에서 제외될 수 있습니다. </li>
