--- a/upload.html
+++ b/upload.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="utf-8" />
-    <title>글로(glo) l glo HYPER pro</title>
 
-    <meta name="robots" content="noindex">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="title" content="GX-LAB" />
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-
-    <meta property="og:url" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:image" content="" />
-
-    <link rel="canonical" href="" />
-    <link rel="icon" href="../../resources/favicons/favicon-16.png" sizes="16x16" />
-    <link rel="icon" href="../../resources/favicons/favicon-32.png" sizes="32x32" />
-    <link rel="apple-touch-icon" href="../../resources/favicons/favicon-180.png" sizes="180x180" />
 
     <link rel="stylesheet" type="text/css" href="/content/dam/glo-jp/korea-images/brand-pages/assets/css/hyperpro_aug.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -65,7 +41,8 @@
             <h3 class="reveal reveal_BTT">카더가든 & 킬드런의<br class="mo_only"> 프로 그 이상의 STORY</h3>
             <div class="wrap">
                 <div class="story__box reveal reveal_BTT">
-                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_01.png" alt="카더가든 이미지" class="people">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_01.png" alt="카더가든 이미지" class="people pc_only">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_01_m.png" alt="카더가든 이미지" class="people mo_only">
                     <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_01_device.png" alt="하이퍼 프로" class="dev">
                     <p class="story__txt">
                         <strong>
@@ -79,7 +56,8 @@
                     </p>
                 </div>
                 <div class="story__box killdren reveal reveal_BTT">
-                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_02.png" alt="킬드런 이미지" class="people">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_02.png" alt="킬드런 이미지" class="people pc_only">
+                    <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_02_m.png" alt="킬드런 이미지" class="people mo_only">
                     <img src="/content/dam/glo-jp/korea-images/brand-pages/images/2024/pro_aug/story_02_device.png" alt="하이퍼 프로" class="dev">
                     <p class="story__txt">
                         그림을 그리다보니 미적인 부분을 먼저 보게 되는데<br>
@@ -125,7 +103,21 @@
                     </p>
                 </div>
             </div>
-            <div class="title">‘하이퍼 프로는 <br class="mo_only"> <span class="text_deco">디자인</span>  그 이상’ </div>
+            <div class="title">
+                <span>‘하이퍼 프로는</span> 
+                <div class="wrap">
+                    <div class="rolling">
+                        <ul >
+                            <li>디자인</li>
+                            <li>편리함</li>
+                            <li>간편함</li>
+                            <li>즐거움</li>
+                            <li>만족감</li>
+                        </ul>
+                    </div>  
+                    <span> 그 이상’ </span>
+                </div>
+            </div>
             <div class="btn">
                 <a href="/glo/devices/hyperpro" class="btn__rec">하이퍼 프로 구매하고 참여하기<span class="arrow"></span></a>
             </div>
